--- a/cerfa_filler/templates/home.html
+++ b/cerfa_filler/templates/home.html
@@ -22,8 +22,8 @@
             <div class="col-md-6">
                 <div class="card text-center text-bg-success">
                     <div class="card-body">
-                        <h2 class="card-title">{% translate 'Individual' %}</h2>
-                        <a href="€" class="btn btn-primary">Go to Page 2</a>
+                        <h2 class="card-title">{% translate 'Individuals' %}</h2>
+                        <button href="#" class="btn btn-primary" disabled>{% translate 'Individuals List' %}</button>
                     </div>
                 </div>
             </div>
