--- a/cerfa_filler/templates/company_list.html
+++ b/cerfa_filler/templates/company_list.html
@@ -5,33 +5,46 @@
 {% block title %}Companies List{% endblock %}
 
 {% block content %}
-    <h2 class="m-3">Companies</h2>
-    <a href="{%url 'cerfa_filler:companies-create' %}" >Plus</a>
+<div class="m-3">
+    <div class="float-end">
+        <a class="btn btn-primary m-3" href="{%url 'cerfa_filler:companies-create' %}" >Plus</a>
+    </div>
+
+    <h2>
+        {%translate 'Companies'%}
+    </h2>
+    
+</div>
+    
     <table class="table table-striped">
         <thead>
             <tr>
-                <th>Year</th>
-                <th>Order number</th>
-                <th>Label</th>
-                <th>Legal Status</th>
-                <th>Postal Code</th>
-                <th>Total donation</th>
-                <th>Actions</th>
+                <th><input type="checkbox" onclick="toggle(this);"></th>
+                <th>{%translate 'Year'%}</th>
+                <th>{%translate 'Order number'%}</th>
+                <th>{%translate 'Label'%}</th>
+                <th>{%translate 'Legal Status'%}</th>
+                <th>{%translate 'Postal Code'%}</th>
+                <th>{%translate 'Total donation'%}</th>
+                <th>{%translate 'Status'%}</th>
+                <th>{%translate 'Actions'%}</th>
             </tr>
         </thead>
         <tbody>
             {% for company in companies %}
             <tr>
+                <th><input type="checkbox" name="select"></th>
                 <td>{{ company.year }}</td>
                 <td>{{ company.order_number }}</td>
                 <td>{{ company.label }}</td>
                 <td>{{ company.get_legal_status_display }}</td>
                 <td>{{ company.postal_code }}</td>
                 <td>{{ company.total_donation }} €</td>
+                <td><span class="text-success">⬤</span></td>
                 <td>
-                    <a href="{% url 'cerfa_filler:companies-update' company.uuid %}" class="btn btn-warning">Edit</a>
-                    <a href="{% url 'cerfa_filler:companies-cerfa-pdf' company.uuid %}" class="btn btn-success">Cerfa</a>
-                    <button class="btn btn-info" onclick="downloadAndEmail('{{ company.label }}', '{% url 'cerfa_filler:companies-cerfa-pdf' company.uuid %}')">Download & Email</button>
+                    <a href="{% url 'cerfa_filler:companies-update' company.uuid %}" class="btn btn-sm btn-warning">Edit</a>
+                    <a href="{% url 'cerfa_filler:companies-cerfa-pdf' company.uuid %}" class="btn btn-sm btn-success">Cerfa</a>
+                    <a class="btn btn-sm btn-info" href="{{company.mailto}}">Email</button>
                 </td>
             </tr>
             {% endfor %}
@@ -41,23 +54,40 @@
     <a id="mailtoLink"  class="btn btn-info" href="#" style="display:none;">Send Email</a>
 
     <script>
-        function downloadAndEmail(companyLabel, pdfUrl) {
-            const fileName = `${companyLabel}.pdf`;
+        const emailLink = (label, email, pdfUrl) => {
+            
+            const formattedPdfUrl = window.location.origin + pdfUrl
+            const formattedSubject = {% blocktranslate %}`Tax receipt for your donation`{%endblocktranslate%};
+            const formattedBody = {% blocktranslate %}`Hello,\nPlease find below a link to download your tax receipt for your donation.\n${formattedPdfUrl}`{%endblocktranslate%};
+            mailtoLink.href = `mailto:${email}?subject=${formattedSubject}&body=${encodeURIComponent(formattedBody)}`;
+            mailtoLink.style.display = 'inline';
 
-            fetch(pdfUrl)
-                .then(response => response.blob())
-                .then(blob => {
-                    const link = document.createElement('a');
-                    link.href = window.URL.createObjectURL(blob);
-                    link.download = fileName;
-                    link.click();
+            //fetch(pdfUrl)
+            //    .then(response => response.blob())
+//                .then(blob => {
+                    //const link = document.createElement('a');
+                    ////link.href = window.URL.createObjectURL(blob);
+                    //link.download = fileName;
+                    //link.click();
 
                     // Create mailto link
-                    const mailtoLink = document.getElementById('mailtoLink');
-                    mailtoLink.href = `mailto:example@example.com?subject=Document for ${companyLabel}&body=Please find the attached document for ${companyLabel}.`;
-                    mailtoLink.style.display = 'inline';
-                })
-                .catch(error => console.error('Error downloading the file:', error));
+               //     const mailtoLink = document.getElementById('mailtoLink');
+               //     mailtoLink.href = `mailto:example@example.com?subject=Document for ${companyLabel}&body=Please find the attached document for ${companyLabel}.`;
+              //      mailtoLink.style.display = 'inline';
+           //     })
+           //     .catch(error => console.error('Error downloading the file:', error));
         }
+        const toggle= (source) => {
+            let checkboxes = document
+                .querySelectorAll('input[type="checkbox"]');
+            checkboxes.forEach((i) => {
+                if(i != source) {
+                    i.checked = source.checked
+                }
+            }
+                )
+           
+        }
+
     </script>
 {% endblock %}
