--- a/cerfa_filler/templates/company_list.html
+++ b/cerfa_filler/templates/company_list.html
@@ -40,7 +40,7 @@
                 <td>{{ company.get_legal_status_display }}</td>
                 <td>{{ company.postal_code }}</td>
                 <td>{{ company.total_donation }} €</td>
-                <td><span class="text-success">⬤</span></td>
+                <td><span class="text-{% if company.valid_date %}success{%else%}secondary{%endif%}">{% if company.valid_date %}⬤{%else%}◯{%endif%}</span></td>
                 <td>
                     <a href="{% url 'cerfa_filler:companies-update' company.uuid %}" class="btn btn-sm btn-warning">Edit</a>
                     <a href="{% url 'cerfa_filler:companies-cerfa-pdf' company.uuid %}" class="btn btn-sm btn-success">Cerfa</a>
