--- a/cerfa_filler/templates/company_form.html
+++ b/cerfa_filler/templates/company_form.html
@@ -7,16 +7,18 @@
 {% block content %}
 <div class="container">
     <h2>{% if object %}{% translate 'Edit' %}{% else %}{% translate 'Create' %}{% endif %} Company</h2>
-    
+
     {% bootstrap_messages %}
     <form method="post">
         {% csrf_token %}
 
-    {% bootstrap_form form %}
+        {% bootstrap_form form %}
 
-    {% bootstrap_button button_type="submit" content="OK" %}
-        {% comment %} <button type="submit" class="btn btn-success">Save</button> {% endcomment %}
+        {% bootstrap_button button_type="submit" content="OK" %}
+        {% comment %}
+        <button type="submit" class="btn btn-success">Save</button>
+        {% endcomment %}
         <a href="{% url 'cerfa_filler:companies-list' %}" class="btn btn-secondary">Cancel</a>
     </form>
 
-{% endblock %}
+    {% endblock %}
