--- a/cerfa_filler/templates/company_list.html
+++ b/cerfa_filler/templates/company_list.html
@@ -7,87 +7,102 @@
 {% block content %}
 <div class="m-3">
     <div class="float-end">
-        <a class="btn btn-primary m-3" href="{%url 'cerfa_filler:companies-create' %}" >Plus</a>
+        {% if perms.cerfa_filler.add_companies %}<a class="btn btn-primary m-3"
+                                                    href="{%url 'cerfa_filler:companies-create' %}">＋ Nouveau</a>{%endif%}
+        {% if perms.cerfa_filler.change_validation %}
+        <button type="submit" form="update-form" class="btn btn-success m-3">✔ Valider</button>
+        {%endif%}
     </div>
-
     <h2>
         {%translate 'Companies'%}
     </h2>
-    
 </div>
-    
+<form id="update-form" method="post" action="{% url 'cerfa_filler:update-valid-date' %}">
+    {% csrf_token %}
     <table class="table table-striped">
         <thead>
-            <tr>
+        <tr>
+            {% if perms.cerfa_filler.change_validation %}
                 <th><input type="checkbox" onclick="toggle(this);"></th>
-                <th>{%translate 'Year'%}</th>
-                <th>{%translate 'Order number'%}</th>
-                <th>{%translate 'Label'%}</th>
-                <th>{%translate 'Legal Status'%}</th>
-                <th>{%translate 'Postal Code'%}</th>
-                <th>{%translate 'Total donation'%}</th>
-                <th>{%translate 'Status'%}</th>
-                <th>{%translate 'Actions'%}</th>
-            </tr>
+            {%endif%}
+            <th>{%translate 'Year'%}</th>
+            <th>{%translate 'Order number'%}</th>
+            <th>{%translate 'Label'%}</th>
+            <th>{%translate 'Legal Status'%}</th>
+            <th>{%translate 'Postal Code'%}</th>
+            <th>{%translate 'Total donation'%}</th>
+            <th>{%translate 'Status'%}</th>
+            {% if perms.cerfa_filler.change_companies or perms.cerfa_filler.send_email %}
+            <th>{%translate 'Actions'%}</th>
+            {% endif %}
+        </tr>
         </thead>
         <tbody>
-            {% for company in companies %}
-            <tr>
-                <th><input type="checkbox" name="select"></th>
-                <td>{{ company.year }}</td>
-                <td>{{ company.order_number }}</td>
-                <td>{{ company.label }}</td>
-                <td>{{ company.get_legal_status_display }}</td>
-                <td>{{ company.postal_code }}</td>
-                <td>{{ company.total_donation }} €</td>
-                <td><span class="text-{% if company.valid_date %}success{%else%}secondary{%endif%}">{% if company.valid_date %}⬤{%else%}◯{%endif%}</span></td>
-                <td>
-                    <a href="{% url 'cerfa_filler:companies-update' company.uuid %}" class="btn btn-sm btn-warning">Edit</a>
-                    <a href="{% url 'cerfa_filler:companies-cerfa-pdf' company.uuid %}" class="btn btn-sm btn-success">Cerfa</a>
-                    <a class="btn btn-sm btn-info" href="{{company.mailto}}">Email</button>
-                </td>
-            </tr>
-            {% endfor %}
+        {% for company in companies %}
+        <tr>
+            {% if perms.cerfa_filler.change_validation %}
+                <th><input type="checkbox" name="selected_companies" value="{{ company.uuid }}"></th>
+            {% endif %}
+            <td>{{ company.year }}</td>
+            <td>{{ company.order_number }}</td>
+            <td>{{ company.label }}</td>
+            <td>{{ company.get_legal_status_display }}</td>
+            <td>{{ company.postal_code }}</td>
+            <td>{{ company.total_donation }} €</td>
+            <td><span class="text-{% if company.valid_date %}success{%else%}secondary{%endif%}">{% if company.valid_date %}⬤{%else%}◯{%endif%}</span>
+            </td>
+            {% if perms.cerfa_filler.change_companies or perms.cerfa_filler.send_email %}
+            <td>
+                {% if perms.cerfa_filler.change_companies %}<a
+                    href="{% url 'cerfa_filler:companies-update' company.uuid %}"
+                    class="btn btn-sm btn-warning">Edit</a>{%endif%}
+                {% if perms.cerfa_filler.send_email %} <a
+                    href="{% url 'cerfa_filler:companies-cerfa-pdf' company.uuid %}"
+                    class="btn btn-sm btn-success">Cerfa</a>
+                <a class="btn btn-sm btn-info" href="{{company.mailto}}">Email</a>
+                {% endif %}
+            </td>
+            {% endif %}
+        </tr>
+        {% endfor %}
         </tbody>
     </table>
+</form>
+<script>
+    const emailLink = (label, email, pdfUrl) => {
 
-    <a id="mailtoLink"  class="btn btn-info" href="#" style="display:none;">Send Email</a>
+        const formattedPdfUrl = window.location.origin + pdfUrl
+        const formattedSubject = {% blocktranslate %}`Tax receipt for your donation`{%endblocktranslate%};
+        const formattedBody = {% blocktranslate %}`Hello,\nPlease find below a link to download your tax receipt for your donation.\n${formattedPdfUrl}`{%endblocktranslate%};
+        mailtoLink.href = `mailto:${email}?subject=${formattedSubject}&body=${encodeURIComponent(formattedBody)}`;
+        mailtoLink.style.display = 'inline';
 
-    <script>
-        const emailLink = (label, email, pdfUrl) => {
-            
-            const formattedPdfUrl = window.location.origin + pdfUrl
-            const formattedSubject = {% blocktranslate %}`Tax receipt for your donation`{%endblocktranslate%};
-            const formattedBody = {% blocktranslate %}`Hello,\nPlease find below a link to download your tax receipt for your donation.\n${formattedPdfUrl}`{%endblocktranslate%};
-            mailtoLink.href = `mailto:${email}?subject=${formattedSubject}&body=${encodeURIComponent(formattedBody)}`;
-            mailtoLink.style.display = 'inline';
-
-            //fetch(pdfUrl)
-            //    .then(response => response.blob())
+        //fetch(pdfUrl)
+        //    .then(response => response.blob())
 //                .then(blob => {
-                    //const link = document.createElement('a');
-                    ////link.href = window.URL.createObjectURL(blob);
-                    //link.download = fileName;
-                    //link.click();
+                //const link = document.createElement('a');
+                ////link.href = window.URL.createObjectURL(blob);
+                //link.download = fileName;
+                //link.click();
 
-                    // Create mailto link
-               //     const mailtoLink = document.getElementById('mailtoLink');
-               //     mailtoLink.href = `mailto:example@example.com?subject=Document for ${companyLabel}&body=Please find the attached document for ${companyLabel}.`;
-              //      mailtoLink.style.display = 'inline';
-           //     })
-           //     .catch(error => console.error('Error downloading the file:', error));
-        }
-        const toggle= (source) => {
-            let checkboxes = document
-                .querySelectorAll('input[type="checkbox"]');
-            checkboxes.forEach((i) => {
-                if(i != source) {
-                    i.checked = source.checked
-                }
+                // Create mailto link
+           //     const mailtoLink = document.getElementById('mailtoLink');
+           //     mailtoLink.href = `mailto:example@example.com?subject=Document for ${companyLabel}&body=Please find the attached document for ${companyLabel}.`;
+          //      mailtoLink.style.display = 'inline';
+       //     })
+       //     .catch(error => console.error('Error downloading the file:', error));
+    }
+    const toggle= (source) => {
+        let checkboxes = document
+            .querySelectorAll('input[type="checkbox"]');
+        checkboxes.forEach((i) => {
+            if(i != source) {
+                i.checked = source.checked
             }
-                )
-           
         }
+            )
 
-    </script>
+    }
+
+</script>
 {% endblock %}
