--- a/accounts/templates/login_page.html
+++ b/accounts/templates/login_page.html
@@ -10,7 +10,7 @@
 
 {% block content %}
 
-<section class="bg-light py-3 py-md-5">
+<section class="bg-light py-3 py-md-5 mh-100">
   <div class="container">
     <div class="row justify-content-center">
                         {% bootstrap_messages %}
