--- a/cerfa_filler/templates/base.html
+++ b/cerfa_filler/templates/base.html
@@ -4,44 +4,52 @@
 
 {% bootstrap_javascript %}
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="fr" class="h-100" data-bs-theme="auto">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    {% comment %}
-    <link href="{% load static %}{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-    {% endcomment %}
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.7/css/bootstrap.min.css"
           integrity="sha512-fw7f+TcMjTb7bpbLJZlP8g2Y4XcCyFZW8uy8HsRZsH/SwbMw0plKHFHr99DN3l04VsYNwvzicUX/6qurvIxbxw=="
           crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <title>{% block title %}<title>{% translate "Cerfa filler" %}</title>{% endblock %}</title>
 </head>
-<body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top shadow-sm">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="#">{% translate "Cerfa filler" %}</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
-                {%if user.is_authenticated %} 
-                <li class="nav-item">
-                    <form action="{% url 'accounts:logout' %}" method="post">
-                        {% csrf_token %}
-                        <input type="submit" class="nav-link" value="🔒 Logout ({{user.username}})"/>
-                    </form>
-                </li>
-                {%endif%}
-            </ul>
-        </div>
-    </div>
-</nav>
+<style>
+main > .container {
+  padding: 60px 15px 0;
+}
 
-<main>
-    {% block content %}{% endblock %}
-</main>
+</style>
+<body class="h-100">
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top shadow-sm">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">{% translate "Cerfa filler" %}</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto">
+                        {%if user.is_authenticated %} 
+                        <li class="nav-item">
+                            <form action="{% url 'accounts:logout' %}" method="post">
+                                {% csrf_token %}
+                                <input type="submit" class="nav-link" value="🔒 Logout ({{user.username}})"/>
+                            </form>
+                        </li>
+                        {%endif%}
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <main class="flex-shrink-0">
+        {% block content %}{% endblock %}
+    </main>
+    <footer class="footer mt-auto py-3 bg-body-tertiary">
+        <div class="container text-center"> <span class="text-body-secondary">Made with ♥ with <a href="https://www.djangoproject.com/" target="_blank">Django</a> - <code
+                ></></code></span> </div>
+    </footer>
 </div>
 {% comment %}
 <script src="{% load static %}{% static 'js/bootstrap.bundle.min.js' %}"></script>
