--- a/cerfa_filler/templates/company_list.html
+++ b/cerfa_filler/templates/company_list.html
@@ -6,18 +6,34 @@
 
 {% block content %}
 <div class="m-3">
-    <div class="float-end">
-        {% if perms.cerfa_filler.add_companies %}<a class="btn btn-primary m-3"
+<form id="update-form" method="post" action="{% url 'cerfa_filler:update-valid-date' %}">
+        <div class="float-end">
+        {% if perms.cerfa_filler.add_companies %}<a class="btn btn-primary"
                                                     href="{%url 'cerfa_filler:companies-create' %}">＋ Nouveau</a>{%endif%}
         {% if perms.cerfa_filler.change_validation %}
-        <button type="submit" form="update-form" class="btn btn-success m-3">✔ Valider</button>
+        <button type="submit" form="update-form" class="btn btn-success">✔ Valider</button>
         {%endif%}
     </div>
     <h2>
         {%translate 'Companies'%}
     </h2>
 </div>
-<form id="update-form" method="post" action="{% url 'cerfa_filler:update-valid-date' %}">
+
+
+{% comment %} 
+<div class="row">
+  <div class="col">
+    <input type="text" class="form-control" id="filterYear" placeholder="Filter by Year" onkeyup="filterTable()">
+  </div>
+  <div class="col">
+    <input type="text" class="form-control" id="filterLabel" placeholder="Filter by Label" onkeyup="filterTable()">
+    
+  </div>
+  <div class="col">
+  <input type="text" class="form-control" id="filterPostalCode" placeholder="Filter by Postal Code" onkeyup="filterTable()">
+</div>
+</div> {% endcomment %}
+
     {% csrf_token %}
     <table class="table table-striped">
         <thead>
@@ -25,19 +41,19 @@
             {% if perms.cerfa_filler.change_validation %}
                 <th><input type="checkbox" onclick="toggle(this);"></th>
             {%endif%}
-            <th>{%translate 'Year'%}</th>
-            <th>{%translate 'Order number'%}</th>
-            <th>{%translate 'Label'%}</th>
-            <th>{%translate 'Legal Status'%}</th>
-            <th>{%translate 'Postal Code'%}</th>
-            <th>{%translate 'Total donation'%}</th>
-            <th>{%translate 'Status'%}</th>
+            <th onclick="sortTable({% if perms.cerfa_filler.change_validation %}1{%else%}0{%endif%})">{%translate 'Year'%}</th>
+            <th onclick="sortTable({% if perms.cerfa_filler.change_validation %}2{%else%}1{%endif%})">{%translate 'Order number'%}</th>
+            <th onclick="sortTable({% if perms.cerfa_filler.change_validation %}3{%else%}2{%endif%})">{%translate 'Label'%}</th>
+            <th onclick="sortTable({% if perms.cerfa_filler.change_validation %}4{%else%}3{%endif%})">{%translate 'Legal Status'%}</th>
+            <th onclick="sortTable({% if perms.cerfa_filler.change_validation %}5{%else%}4{%endif%})">{%translate 'Postal Code'%}</th>
+            <th onclick="sortTable({% if perms.cerfa_filler.change_validation %}6{%else%}5{%endif%})">{%translate 'Total donation'%}</th>
+            <th onclick="sortTable({% if perms.cerfa_filler.change_validation %}7{%else%}6{%endif%})">{%translate 'Status'%}</th>
             {% if perms.cerfa_filler.change_companies or perms.cerfa_filler.send_email %}
             <th>{%translate 'Actions'%}</th>
             {% endif %}
         </tr>
         </thead>
-        <tbody>
+        <tbody class="table-group-divider">
         {% for company in companies %}
         <tr>
             {% if perms.cerfa_filler.change_validation %}
@@ -76,21 +92,6 @@
         const formattedBody = {% blocktranslate %}`Hello,\nPlease find below a link to download your tax receipt for your donation.\n${formattedPdfUrl}`{%endblocktranslate%};
         mailtoLink.href = `mailto:${email}?subject=${formattedSubject}&body=${encodeURIComponent(formattedBody)}`;
         mailtoLink.style.display = 'inline';
-
-        //fetch(pdfUrl)
-        //    .then(response => response.blob())
-//                .then(blob => {
-                //const link = document.createElement('a');
-                ////link.href = window.URL.createObjectURL(blob);
-                //link.download = fileName;
-                //link.click();
-
-                // Create mailto link
-           //     const mailtoLink = document.getElementById('mailtoLink');
-           //     mailtoLink.href = `mailto:example@example.com?subject=Document for ${companyLabel}&body=Please find the attached document for ${companyLabel}.`;
-          //      mailtoLink.style.display = 'inline';
-       //     })
-       //     .catch(error => console.error('Error downloading the file:', error));
     }
     const toggle= (source) => {
         let checkboxes = document
@@ -104,5 +105,41 @@
 
     }
 
+{% comment %} 
+    function filterTable() {
+        const yearInput = document.getElementById("filterYear").value.toLowerCase();
+        const labelInput = document.getElementById("filterLabel").value.toLowerCase();
+        const postalCodeInput = document.getElementById("filterPostalCode").value.toLowerCase();
+        const table = document.querySelector(".table tbody");
+        const rows = table.getElementsByTagName("tr");
+
+        for (let i = 0; i < rows.length; i++) {
+            const yearCell = rows[i].getElementsByTagName("td")[0];
+            const labelCell = rows[i].getElementsByTagName("td")[3];
+            const postalCodeCell = rows[i].getElementsByTagName("td")[5];
+
+            const yearText = yearCell ? yearCell.textContent.toLowerCase() : "";
+            const labelText = labelCell ? labelCell.textContent.toLowerCase() : "";
+            const postalCodeText = postalCodeCell ? postalCodeCell.textContent.toLowerCase() : "";
+
+            rows[i].style.display = (yearText.includes(yearInput) && 
+                                    labelText.includes(labelInput) && 
+                                    postalCodeText.includes(postalCodeInput)) ? "" : "none";
+        }
+    } {% endcomment %}
+
+    function sortTable(columnIndex) {
+        const table = document.querySelector(".table tbody");
+        const rows = Array.from(table.rows);
+        const sortedRows = rows.sort((a, b) => {
+            const aText = a.cells[columnIndex].textContent.trim();
+            const bText = b.cells[columnIndex].textContent.trim();
+            return aText.localeCompare(bText);
+        });
+
+        // Clear the table and append sorted rows
+        table.innerHTML = "";
+        sortedRows.forEach(row => table.appendChild(row));
+    }
 </script>
 {% endblock %}
