--- a/cerfa_filler/templates/base.html
+++ b/cerfa_filler/templates/base.html
@@ -47,8 +47,7 @@ main > .container {
         {% block content %}{% endblock %}
     </main>
     <footer class="footer mt-auto py-3 bg-body-tertiary">
-        <div class="container text-center"> <span class="text-body-secondary">Made with ♥ with <a href="https://www.djangoproject.com/" target="_blank">Django</a> - <code
-                ></></code></span> </div>
+        <div class="container text-center text-body-secondary">Made with ♥ with <a href="https://www.djangoproject.com/" target="_blank">Django</a> - <a href="https://github.com/lpoaura/French-CERFA-donation-filler" target="_blank"><code>&lt;/&gt;</code></a></div>
     </footer>
 </div>
 {% comment %}
