--- a/cerfa_filler/templates/company_form.html
+++ b/cerfa_filler/templates/company_form.html
@@ -7,6 +7,7 @@
 {% block content %}
 <div class="container">
     <h2>{% if object %}{% translate 'Edit' %}{% else %}{% translate 'Create' %}{% endif %} Company</h2>
+    <p class="text-muted">{% if object %}{{object.metadata}}{%endif%}</p>
 
     {% bootstrap_messages %}
     <form method="post">
