--- a/cerfa_filler/templates/base.html
+++ b/cerfa_filler/templates/base.html
@@ -19,7 +19,7 @@ main > .container {
 </style>
 <body class="h-100">
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top shadow-sm">
+        <nav  class="navbar navbar-expand-lg bg-primary  sticky-top" data-bs-theme="light">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">{% translate "Cerfa filler" %}</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
