--- a/cerfa_filler/templates/home.html
+++ b/cerfa_filler/templates/home.html
@@ -23,7 +23,7 @@
                 <div class="card text-center text-bg-success">
                     <div class="card-body">
                         <h2 class="card-title">{% translate 'Individuals' %}</h2>
-                        <button href="#" class="btn btn-primary" disabled>{% translate 'Individuals List' %}</button>
+                        <a href="{% url 'cerfa_filler:private-individual-list' %}"  class="btn btn-primary">{% translate 'Individuals List' %}</a>
                     </div>
                 </div>
             </div>
