--- a/cerfa_filler/templates/private_individual_list.html
+++ b/cerfa_filler/templates/private_individual_list.html
@@ -2,7 +2,7 @@
 
 {% load django_bootstrap5 i18n %}
 
-{% block title %}individuals List{% endblock %}
+{% block title %}{%translate 'individuals list'%}{% endblock %}
 
 {% block content %}
 <div class="m-3">
